--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.4.1",
     "globals": "^15.14.0",
     "luxon": "^3.5.0",
+    "motion": "^12.5.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.6",
     "react": "^19.0.0",
