--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@sindresorhus/class-names": "^2.0.0",
     "@types/luxon": "^3.4.2",
     "bcryptjs": "^2.4.3",
     "csv-parser": "^3.2.0",
