--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "resend": "^4.1.2",
     "save": "^2.9.0"
   },
   "devDependencies": {
